--- a/src/templates/pages/blank.twig
+++ b/src/templates/pages/blank.twig
@@ -13,6 +13,6 @@
     </p>
   </div>
 
-  {% include '../components/footer.twig' %}
+  {% include '../components/template/footer.twig' %}
 
 {% endblock %}
