--- a/src/styles/elements/_document.scss
+++ b/src/styles/elements/_document.scss
@@ -2,6 +2,13 @@
  * Document defaults (html, body)
  */
 
+body,
+html {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+}
+
 html {
   font-family: $font-family;
   font-size: $font-size-base;
@@ -9,4 +16,28 @@ html {
   line-height: $line-height-base;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+  width: 12px;
+}
+
+::-webkit-scrollbar:horizontal {
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(32, 65, 180, 0.85);
+  border-radius: 0;
+  border: 0;
+  transition: all .2s ease-in-out;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  transition: all .2s ease-in-out;
 }
