--- a/src/templates/layouts/default.twig
+++ b/src/templates/layouts/default.twig
@@ -1,30 +1,23 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="ru">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>{{ head_title }} &middot; Frontie</title>
+    <title>{{ head_title }}</title>
 
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body{% if body_class is defined and body_class is not empty %} class="{{ body_class }}"{% endif %}>
-
-    {% block page %}{% endblock %}
-
-    <script src="js/vendor.js"></script>
-    <script src="js/app.js"></script>
-
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-      window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-      ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
-    
+    {% include '../components/template/header.twig' %}
+    <main>
+      {% block page %}{% endblock %}
+    </main>
+    {% include '../components/template/footer.twig' %}
+    {% include '../components/template/footer-scripts.twig' %}
   </body>
 </html>
