--- a/src/templates/pages/demo.twig
+++ b/src/templates/pages/demo.twig
@@ -1522,7 +1522,7 @@ py : (vertical) padding-top and padding bottom
 
   </div>
 
-  {% include '../components/footer.twig' %}
+  {% include '../components/template/footer.twig' %}
 
   <!-- https://highlightjs.org/ -->
   <link rel="stylesheet"
