--- a/src/templates/pages/index.twig
+++ b/src/templates/pages/index.twig
@@ -68,6 +68,7 @@
     <h1 class="demo-title">
       Project Name  {{ data }}
     </h1>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
     <p class="demo-subtitle">
       This is the demo index page with basic styling.
       <br>
